Progress on clock screen(fading background, time digits, labels in corner added)

--- a/SpotifyAlarmClock/SpotifyAlarmClock-Info.plist
+++ b/SpotifyAlarmClock/SpotifyAlarmClock-Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
